refactor: Fully migrate to Exlll's configlib